# postmaster

./: .env  .gitignore  Cargo.toml  FILTERING_AND_ROUTING.yaml  LICENSE  LOCAL_DEVELOPMENT.md  README.md  app.py  config.py  design.md  docker-compose.yml  example.env  github.pub  models.py  postmaster_white_paper.md  requirements.txt  snowflake_setup.sql
examples/: zoom-webhook-setup.sh
k8s/: deployment.yaml  rbac.yaml
services/: document.py  embedding.py
src/: config.rs  crd.rs  filter.rs  kafka.rs  main.rs  signature.rs
src/handlers/: health.rs  mod.rs  webhook.rs
webhook-operator/: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  File_Tree.txt  INSTALL.md  Makefile  README.md
webhook-operator/examples/: create-handler.sh  send-webhook.sh
webhook-operator/k8s/: config.yaml  crd.yaml
webhook-operator/src/: controller.rs  state.rs
webhook-operator/src/handlers/: config.rs
